--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
                     <a href="https://github.com/JiaLianjie" target="_blank" class="text-blue-600 hover:underline"><span>Lianjie Jia</span></a><sup>4*</sup>,
                     <a href="https://github.com/Dustzx" target="_blank" class="text-blue-600 hover:underline"><span>Fuxi Zhang</span></a><sup>4</sup>,
                     <a href="https://spyflying.github.io/" target="_blank" class="text-blue-600 hover:underline"><span>Shaofei Huang</span></a><sup>3</sup>,
-                    <a href="https://scholar.google.com/citations?user=3SAk3GQAAAAJ&hl=en" target="_blank" class="text-blue-600 hover:underline"><span></span>Zaibin Zhang</span></a><sup>4</sup>,
                     <a href="https://github.com/Cuirundi" target="_blank" class="text-blue-600 hover:underline"><span>Rundi Cui</span></a><sup>4</sup>,
                     <a href="https://github.com/YuhanWu27" target="_blank" class="text-blue-600 hover:underline"><span></span>Yuhan Wu</span></a><sup>4</sup>,
                     <a href="https://github.com/RBinghao" target="_blank" class="text-blue-600 hover:underline"><span></span>Binghao Ran</span></a><sup>4</sup>,
+                    <a href="https://scholar.google.com/citations?user=3SAk3GQAAAAJ&hl=en" target="_blank" class="text-blue-600 hover:underline"><span></span>Zaibin Zhang</span></a><sup>4</sup>,
                     <br>
                     <a href="https://www.zdzheng.xyz/" target="_blank" class="text-blue-600 hover:underline"><span></span>Zhedong Zheng</span></a><sup>3</sup>,
                     <a href="https://zhipengzhang.cn/" target="_blank" class="text-blue-600 hover:underline"><span></span>Zhipeng Zhang<sup>1</sup></span></a>,
@@ -460,7 +460,7 @@
                     <div class="bibtex">
                         @article{sibench2025,
                             <br>title   = {How Far are VLMs from Visual Spatial Intelligence? A Benchmark-Driven Perspective},
-                            <br>author  = {Songsongyu, Yuxin Chen, Hao Ju, Lianjie Jia, Shaofei Huang, Zaibin Zhang, Rundi Cui, Yuhan Wu, Binghao Ran, Zhedong Zheng, Zhipeng Zhang, Yifan Wang, Lin Song, Lijun Wang, Yanwei Li, Ying Shan, Huchuan Lu},
+                            <br>author  = {Songsongyu, Yuxin Chen, Hao Ju, Lianjie Jia, Shaofei Huang, Rundi Cui, Yuhan Wu, Binghao Ran, Zaibin Zhang, Zhedong Zheng, Zhipeng Zhang, Yifan Wang, Lin Song, Lijun Wang, Yanwei Li, Ying Shan, Huchuan Lu},
                             <br>journal = {arXiv preprint},
                             <br>year    = {2025}
                         }
