update link in html

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                                 <td class="p-4">0.6425</td>
                                 <td class="p-4">0.5559</td>
                                 <td class="p-4">0.8017</td>
-                                <td class="p-4"><a href="#" class="text-blue-500 hover:underline">Link</a></td>
+                                <td class="p-4"><a href="https://arxiv.org/abs/2507.06261" class="text-blue-500 hover:underline">Link</a></td>
                             </tr>
                             <tr class="border-b border-gray-200 hover:bg-gray-50">
                                 <td class="p-4 font-bold text-gray-700">2</td>
@@ -276,7 +276,7 @@
                                 <td class="p-4">0.5726</td>
                                 <td class="p-4">0.5134</td>
                                 <td class="p-4">0.4815</td>
-                                <td class="p-4"><a href="#" class="text-blue-500 hover:underline">Link</a></td>
+                                <td class="p-4"><a href="https://arxiv.org/abs/2508.18265" class="text-blue-500 hover:underline">Link</a></td>
                             </tr>
                             <tr class="border-b border-gray-200 hover:bg-gray-50">
                                 <td class="p-4 font-bold text-gray-700">3</td>
@@ -285,7 +285,7 @@
                                 <td class="p-4">0.5947</td>
                                 <td class="p-4">0.5001</td>
                                 <td class="p-4">0.4640</td>
-                                <td class="p-4"><a href="#" class="text-blue-500 hover:underline">Link</a></td>
+                                <td class="p-4"><a href="https://arxiv.org/abs/2504.10479" class="text-blue-500 hover:underline">Link</a></td>
                             </tr>
                                 <tr class="border-b border-gray-200 hover:bg-gray-50">
                                 <td class="p-4 font-bold text-gray-700">4</td>
