update link in html

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                                 <td class="p-4">0.5634</td>
                                 <td class="p-4">0.5019</td>
                                 <td class="p-4">0.4161</td>
-                                <td class="p-4"><a href="#" class="text-blue-500 hover:underline">Link</a></td>
+                                <td class="p-4"><a href="https://arxiv.org/abs/2502.13923" class="text-blue-500 hover:underline">Link</a></td>
                             </tr>
                                 <tr class="border-b border-gray-200 hover:bg-gray-50">
                                 <td class="p-4 font-bold text-gray-700">5</td>
@@ -303,7 +303,7 @@
                                 <td class="p-4">0.6061</td>
                                 <td class="p-4">0.4889</td>
                                 <td class="p-4">0.3878</td>
-                                <td class="p-4"><a href="#" class="text-blue-500 hover:underline">Link</a></td>
+                                <td class="p-4"><a href="https://arxiv.org/abs/2408.03326" class="text-blue-500 hover:underline">Link</a></td>
                             </tr>
                                 <tr class="border-b border-gray-200 hover:bg-gray-50">
                                 <td class="p-4 font-bold text-gray-700">6</td>
@@ -312,7 +312,7 @@
                                 <td class="p-4">0.5991</td>
                                 <td class="p-4">0.4635</td>
                                 <td class="p-4">0.5425</td>
-                                <td class="p-4"><a href="#" class="text-blue-500 hover:underline">Link</a></td>
+                                <td class="p-4"><a href="https://arxiv.org/abs/2412.05271" class="text-blue-500 hover:underline">Link</a></td>
                             </tr>
                                 <tr class="border-b border-gray-200 hover:bg-gray-50">
                                 <td class="p-4 font-bold text-gray-700">7</td>
@@ -321,7 +321,7 @@
                                 <td class="p-4">0.5821</td>
                                 <td class="p-4">0.4644</td>
                                 <td class="p-4">0.3355</td>
-                                <td class="p-4"><a href="#" class="text-blue-500 hover:underline">Link</a></td>
+                                <td class="p-4"><a href="https://arxiv.org/abs/2408.03326" class="text-blue-500 hover:underline">Link</a></td>
                             </tr>
                                 <tr class="border-b border-gray-200 hover:bg-gray-50">
                                 <td class="p-4 font-bold text-gray-700">8</td>
@@ -330,7 +330,7 @@
                                 <td class="p-4">0.5422</td>
                                 <td class="p-4">0.3942</td>
                                 <td class="p-4">0.6100</td>
-                                <td class="p-4"><a href="#" class="text-blue-500 hover:underline">Link</a></td>
+                                <td class="p-4"><a href="https://arxiv.org/abs/2507.06261" class="text-blue-500 hover:underline">Link</a></td>
                             </tr>
                                 </tr>
                                 <tr class="border-b border-gray-200 hover:bg-gray-50">
@@ -340,7 +340,7 @@
                                 <td class="p-4">0.5505</td>
                                 <td class="p-4">0.3981</td>
                                 <td class="p-4">0.3050</td>
-                                <td class="p-4"><a href="#" class="text-blue-500 hover:underline">Link</a></td>
+                                <td class="p-4"><a href="https://arxiv.org/abs/2410.21276" class="text-blue-500 hover:underline">Link</a></td>
                             </tr>
                                 </tr>
                                 <tr class="border-b border-gray-200 hover:bg-gray-50">
@@ -350,7 +350,7 @@
                                 <td class="p-4">0.5196</td>
                                 <td class="p-4">0.3946</td>
                                 <td class="p-4">0.2832</td>
-                                <td class="p-4"><a href="#" class="text-blue-500 hover:underline">Link</a></td>
+                                <td class="p-4"><a href="https://arxiv.org/abs/2502.13923" class="text-blue-500 hover:underline">Link</a></td>
                             </tr>
                         </tbody>
                     </table>
@@ -385,7 +385,7 @@
                                 <td class="p-4">0.7248</td>
                                 <td class="p-4">0.6487</td>
                                 <td class="p-4">0.775</td>
-                                <td class="p-4"><a href="#" class="text-blue-500 hover:underline">Link</a></td>
+                                <td class="p-4"><a href="https://cdn.openai.com/gpt-5-system-card.pdf" class="text-blue-500 hover:underline">Link</a></td>
                             </tr>
                             <tr class="border-b border-gray-200 hover:bg-gray-50">
                                 <td class="p-4 font-bold text-gray-700">2</td>
@@ -394,7 +394,7 @@
                                 <td class="p-4">0.7317</td>
                                 <td class="p-4">0.5827</td>
                                 <td class="p-4">0.675</td>
-                                <td class="p-4"><a href="#" class="text-blue-500 hover:underline">Link</a></td>
+                                <td class="p-4"><a href="https://arxiv.org/abs/2507.06261" class="text-blue-500 hover:underline">Link</a></td>
                             </tr>
                             <tr class="border-b border-gray-200 hover:bg-gray-50">
                                 <td class="p-4 font-bold text-gray-700">3</td>
@@ -403,7 +403,7 @@
                                 <td class="p-4">0.6963</td>
                                 <td class="p-4">0.5922</td>
                                 <td class="p-4">0.65</td>
-                                <td class="p-4"><a href="#" class="text-blue-500 hover:underline">Link</a></td>
+                                <td class="p-4"><a href="https://arxiv.org/abs/2505.07062" class="text-blue-500 hover:underline">Link</a></td>
                             </tr>
                             <tr class="border-b border-gray-200 hover:bg-gray-50">
                                 <td class="p-4 font-bold text-gray-700">4</td>
@@ -412,7 +412,7 @@
                                 <td class="p-4">0.6936</td>
                                 <td class="p-4">0.5404</td>
                                 <td class="p-4">0.5125</td>
-                                <td class="p-4"><a href="#" class="text-blue-500 hover:underline">Link</a></td>
+                                <td class="p-4"><a href="https://arxiv.org/abs/2508.06471" class="text-blue-500 hover:underline">Link</a></td>
                             </tr>
                             <tr class="border-b border-gray-200 hover:bg-gray-50">
                                 <td class="p-4 font-bold text-gray-700">5</td>
@@ -421,7 +421,7 @@
                                 <td class="p-4">0.6113</td>
                                 <td class="p-4">0.5089</td>
                                 <td class="p-4">0.4878</td>
-                                <td class="p-4"><a href="#" class="text-blue-500 hover:underline">Link</a></td>
+                                <td class="p-4"><a href="https://arxiv.org/abs/2508.18265" class="text-blue-500 hover:underline">Link</a></td>
                             </tr>
                             <tr class="border-b border-gray-200 hover:bg-gray-50">
                                 <td class="p-4 font-bold text-gray-700">6</td>
@@ -430,7 +430,7 @@
                                 <td class="p-4">0.6356</td>
                                 <td class="p-4">0.4526</td>
                                 <td class="p-4">0.3780</td>
-                                <td class="p-4"><a href="#" class="text-blue-500 hover:underline">Link</a></td>
+                                <td class="p-4"><a href="https://arxiv.org/abs/2502.13923" class="text-blue-500 hover:underline">Link</a></td>
                             </tr>
                             <tr class="border-b border-gray-200 hover:bg-gray-50">
                                 <td class="p-4 font-bold text-gray-700">7</td>
@@ -439,7 +439,7 @@
                                 <td class="p-4">0.5951</td>
                                 <td class="p-4">0.4633</td>
                                 <td class="p-4">0.4268</td>
-                                <td class="p-4"><a href="#" class="text-blue-500 hover:underline">Link</a></td>
+                                <td class="p-4"><a href="https://arxiv.org/abs/2408.03326" class="text-blue-500 hover:underline">Link</a></td>
                             </tr>
                         </tbody>
                     </table>
