--- a/index.html
+++ b/index.html
@@ -459,10 +459,10 @@
                 <div class="max-w-4xl mx-auto bg-white">
                     <div class="bibtex">
                         @article{sibench2025,
-                            <br>title   = {How Far are VLMs from Visual Spatial Intelligence? A Benchmark-Driven Perspective},
-                            <br>author  = {Songsongyu, Yuxin Chen, Hao Ju, Lianjie Jia, Shaofei Huang, Rundi Cui, Yuhan Wu, Binghao Ran, Zaibin Zhang, Zhedong Zheng, Zhipeng Zhang, Yifan Wang, Lin Song, Lijun Wang, Yanwei Li, Ying Shan, Huchuan Lu},
-                            <br>journal = {arXiv preprint},
-                            <br>year    = {2025}
+                          title={How Far are VLMs from True Visual Spatial Intelligence? A Benchmark-Driven Perspective},
+                          author={Songsong Yu, Yuxin Chen, Hao Ju, Lianjie Jia, Fuxi Zhang, Shaofei Huang, Yuhan Wu, Rundi Cui, Binghao Ran, Zaibin Zhang, Zhedong Zheng, Zhipeng Zhang, Yifan Wang, Lin Song, Lijun Wang, Yanwei Li, Ying Shan, Huchuan Lu},
+                          journal={arXiv preprint arXiv:2509.18905},
+                          year={2025}
                         }
                     </div>
                 </div>
