--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
                                 <td class="p-4">0.6936</td>
                                 <td class="p-4">0.5404</td>
                                 <td class="p-4">0.5125</td>
-                                <td class="p-4"><a href="https://arxiv.org/abs/2508.06471" class="text-blue-500 hover:underline">Link</a></td>
+                                <td class="p-4"><a href="https://huggingface.co/zai-org/GLM-4.5V" class="text-blue-500 hover:underline">Link</a></td>
                             </tr>
                             <tr class="border-b border-gray-200 hover:bg-gray-50">
                                 <td class="p-4 font-bold text-gray-700">5</td>
