--- a/index.html
+++ b/index.html
@@ -262,6 +262,24 @@
                         <tbody class="text-gray-700">
                             <tr class="border-b border-gray-200 hover:bg-gray-50">
                                 <td class="p-4 font-bold text-blue-600">1</td>
+                                <td class="p-4 font-medium">GPT-5</td>
+                                <td class="p-4 font-semibold">0.6341</td>
+                                <td class="p-4">0.6934</td>
+                                <td class="p-4">0.6158</td>
+                                <td class="p-4">0.6296</td>
+                                <td class="p-4"><a href="https://arxiv.org/abs/2507.06261" class="text-blue-500 hover:underline">Link</a></td>
+                            </tr>
+                            <tr class="border-b border-gray-200 hover:bg-gray-50">
+                                <td class="p-4 font-bold text-blue-600">2</td>
+                                <td class="p-4 font-medium">Doubao-Seed-1.6-Vision</td>
+                                <td class="p-4 font-semibold">0.6012</td>
+                                <td class="p-4">0.7003</td>
+                                <td class="p-4">0.5862</td>
+                                <td class="p-4">0.6229</td>
+                                <td class="p-4"><a href="https://arxiv.org/abs/2507.06261" class="text-blue-500 hover:underline">Link</a></td>
+                            </tr>
+                            <tr class="border-b border-gray-200 hover:bg-gray-50">
+                                <td class="p-4 font-bold text-blue-600">3</td>
                                 <td class="p-4 font-medium">Gemini-2.5-Pro</td>
                                 <td class="p-4 font-semibold">0.5883</td>
                                 <td class="p-4">0.6425</td>
@@ -270,7 +288,7 @@
                                 <td class="p-4"><a href="https://arxiv.org/abs/2507.06261" class="text-blue-500 hover:underline">Link</a></td>
                             </tr>
                             <tr class="border-b border-gray-200 hover:bg-gray-50">
-                                <td class="p-4 font-bold text-gray-700">2</td>
+                                <td class="p-4 font-bold text-gray-700">4</td>
                                 <td class="p-4 font-medium">InternVL-3.5-38B</td>
                                 <td class="p-4 font-semibold">0.5252</td>
                                 <td class="p-4">0.5726</td>
@@ -279,7 +297,7 @@
                                 <td class="p-4"><a href="https://arxiv.org/abs/2508.18265" class="text-blue-500 hover:underline">Link</a></td>
                             </tr>
                             <tr class="border-b border-gray-200 hover:bg-gray-50">
-                                <td class="p-4 font-bold text-gray-700">3</td>
+                                <td class="p-4 font-bold text-gray-700">5</td>
                                 <td class="p-4 font-medium">InternVL-3-78B</td>
                                 <td class="p-4 font-semibold">0.5197</td>
                                 <td class="p-4">0.5947</td>
@@ -288,7 +306,7 @@
                                 <td class="p-4"><a href="https://arxiv.org/abs/2504.10479" class="text-blue-500 hover:underline">Link</a></td>
                             </tr>
                                 <tr class="border-b border-gray-200 hover:bg-gray-50">
-                                <td class="p-4 font-bold text-gray-700">4</td>
+                                <td class="p-4 font-bold text-gray-700">6</td>
                                 <td class="p-4 font-medium">Qwen2.5-VL-72B</td>
                                 <td class="p-4 font-semibold">0.5114</td>
                                 <td class="p-4">0.5634</td>
@@ -297,7 +315,7 @@
                                 <td class="p-4"><a href="https://arxiv.org/abs/2502.13923" class="text-blue-500 hover:underline">Link</a></td>
                             </tr>
                                 <tr class="border-b border-gray-200 hover:bg-gray-50">
-                                <td class="p-4 font-bold text-gray-700">5</td>
+                                <td class="p-4 font-bold text-gray-700">7</td>
                                 <td class="p-4 font-medium">LLaVA-OneVision-72B</td>
                                 <td class="p-4 font-semibold">0.5103</td>
                                 <td class="p-4">0.6061</td>
@@ -306,7 +324,7 @@
                                 <td class="p-4"><a href="https://arxiv.org/abs/2408.03326" class="text-blue-500 hover:underline">Link</a></td>
                             </tr>
                                 <tr class="border-b border-gray-200 hover:bg-gray-50">
-                                <td class="p-4 font-bold text-gray-700">6</td>
+                                <td class="p-4 font-bold text-gray-700">8</td>
                                 <td class="p-4 font-medium">InternVL-2.5-78B-MPO</td>
                                 <td class="p-4 font-semibold">0.4983</td>
                                 <td class="p-4">0.5991</td>
@@ -315,7 +333,7 @@
                                 <td class="p-4"><a href="https://arxiv.org/abs/2412.05271" class="text-blue-500 hover:underline">Link</a></td>
                             </tr>
                                 <tr class="border-b border-gray-200 hover:bg-gray-50">
-                                <td class="p-4 font-bold text-gray-700">7</td>
+                                <td class="p-4 font-bold text-gray-700">9</td>
                                 <td class="p-4 font-medium">LLaVA-OneVision-7B</td>
                                 <td class="p-4 font-semibold">0.4844</td>
                                 <td class="p-4">0.5821</td>
@@ -324,7 +342,7 @@
                                 <td class="p-4"><a href="https://arxiv.org/abs/2408.03326" class="text-blue-500 hover:underline">Link</a></td>
                             </tr>
                                 <tr class="border-b border-gray-200 hover:bg-gray-50">
-                                <td class="p-4 font-bold text-gray-700">8</td>
+                                <td class="p-4 font-bold text-gray-700">10</td>
                                 <td class="p-4 font-medium">Gemini-2.5-Flash</td>
                                 <td class="p-4 font-semibold">0.4389</td>
                                 <td class="p-4">0.5422</td>
@@ -334,7 +352,7 @@
                             </tr>
                                 </tr>
                                 <tr class="border-b border-gray-200 hover:bg-gray-50">
-                                <td class="p-4 font-bold text-gray-700">9</td>
+                                <td class="p-4 font-bold text-gray-700">11</td>
                                 <td class="p-4 font-medium">GPT-4o-mini</td>
                                 <td class="p-4 font-semibold">0.4278</td>
                                 <td class="p-4">0.5505</td>
@@ -344,7 +362,7 @@
                             </tr>
                                 </tr>
                                 <tr class="border-b border-gray-200 hover:bg-gray-50">
-                                <td class="p-4 font-bold text-gray-700">10</td>
+                                <td class="p-4 font-bold text-gray-700">12</td>
                                 <td class="p-4 font-medium">Qwen2.5-VL-7B</td>
                                 <td class="p-4 font-semibold">0.4172</td>
                                 <td class="p-4">0.5196</td>
